--- a/apps/docs/stories/Text.stories.mdx
+++ b/apps/docs/stories/Text.stories.mdx
@@ -1,29 +1,29 @@
-import { Button } from '@arzivre/ui/src'
+import { Text } from '@arzivre/ui/src'
 import { Meta, Story, Preview, Props } from '@storybook/addon-docs/blocks'
 
-<Meta title='Components/Button' component={Button} />
+<Meta title='Components/Text' component={Text} />
 
-export const Template = (args) => <Button {...args} />
+export const Template = (args) => <Text {...args} />
 
-# Button
+# Text
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod, nisl eget consectetur tempor, nisl nunc egestas nisi, euismod aliquam nisl nunc euismod.
 
 ## Props
 
-<Props of={Button} />
+<Props of={Text} />
 
 ## Examples
 
 <Preview>
   <Story name='Default'>
-    <Button>Hello</Button>
+    <Text>Hello</Text>
   </Story>
 </Preview>
 
 ## tes
 
-Let's define a story for our `Button` component:
+Let's define a story for our `Text` component:
 
 <Story
   name='positive'
